added header to project page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chocolate Pizza</title>
+  <link rel='stylesheet' type="text/css" href="./style.css"></link>
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="">"
-    <h1>Delicious</h1>
-    <h2>The Best Food Blog On the Web.</h2>
-    <img src = "img/social media links.png" alt="">
-    <img src = "img/logo.png" alt="">
-    
-  </header>
+      <div>
+        <img id="logo" src="./img/logo.png" alt="fork and knife logo">
+        <ul>
+          <li><h1>Delicious</h1></li>
+          <li><h2>THE BEST FOOD BLOG ON THE WEB</h2></li>
+        </ul>
+      </div>
+      <nav>
+        <a href=""><img src="./img/fb-icon.png" alt="Facebook Icon"></a>
+        <a href=""><img src="./img/twit-icon.png" alt="Twitter Icon"></a>
+        <a href=""><img src="./img/gp-icon.png" alt="Google Plus Icon"></a>
+        <a href=""><img src="./img/insta-icon.png" alt="Instagram Icon"></a>
+        <a href=""><img src="./img/flic-icon.png" alt="Flic Icon"></a>
+        <a href=""><img src="./img/pint-icon.png" alt="Pinterest Icon"></a>
+        <a id="rss" href=""><img src="./img/rss-icon.png" alt="RSS Icon"></a>
+        <a href=""><img src="./img/mail-icon.png" alt="Mail Icon"></a>
+        </nav>
+      </header>
   
   <main>
     <h3>Chocolate Pizza</h3>
