--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   </main>
 
   <footer>
-    <img src = "img/hr-img.png.url" id = "slashedLines">
+    <img src = "img/hr-img.png" id = "slashedLines">
+    <article id = "aboutMe">
     <h4>Venessa Stevenson</h4>
     <img src = "img/van-pic.png" id = "vanessaImage">
     <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
@@ -58,6 +59,7 @@
     <img src = "img/small-logo.png" id = "smallLogo">
     <p id = "copyright">Delicious &copy * All rights reserved.</p>
     <p>Proudly established with Ghost.</p>
+    </article>
   </footer>
 
   
