--- a/index.html
+++ b/index.html
@@ -4,38 +4,62 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Chocolate Pizza</title>
 </head>
 <body>
-  <header>
+  <!-- <header>
     <img src="img/logo.png" alt="">"
     <h1>Delicious</h1>
     <h2>The Best Food Blog On the Web.</h2>
     <img src = "img/social media links.png" alt="">
     <img src = "img/logo.png" alt="">
     
-  </header>
+  </header> -->
   
   <main>
-    <h3>Chocolate Pizza</h3>
-    <article>Posted On: 15 DEC 2013 / Desserts</article>
-    <article>addPrintIcon</article>
-    <img src = "img/hr-img.png.url"
-    <img src = "img/choco-pizza.png" id = "hero">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adip</p>
-    <p>Lorem Ippsum</p>
-
     <section>
-      <ul>
-        <li>Ingredients List</li>
+        <h2>Chocolate Pizza</h2>
+        <article id="postedDate">
+            POSTED ON 15 DEC 2013 / DESSERTS
+        </article>
+        <article id="printSection">
+            <img  alt="printIcon" src = "img/print-icon.png">
+            <p>PRINT</p>
+        </article>
+    </section>
+    <section>
+        <img id = "chocolatePizza" alt="chocolatePizza" src = "img/choco-pizza.png">
+    </section>
+    <section>
+        <p id="par1">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+        <p id="par2">Ice cream: in a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whick in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+        <p id="par3">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+    </section>
+
+    <section id="listSection">
+      <ul id="list1">
+        <li>1 1/2 cups milk</li>
+        <li>1/2 cup mascarpone</li>
+        <li>1/2 tsp pink salt</li>
+        <li>1lb Black Mission Figs</li>
+        <li>1/2 cup brown sugar</li>
+        <li>2-4 tbsp water</li>
+      </ul>
+      <ul id="list2">
+        <li>1 1/2 cups heavy cream</li>
+        <li>1/3 granulated sugar</li>
+        <li>2 egg yolks</li>
+        <li>1 lemon juiced</li>
+        <li>2tbsp butter</li>
+        <li>1 cup honey roasted pecans, roughly chopped</li>
       </ul>
     </section>
 
 
   </main>
 
-  <footer>
+  <!-- <footer>
     <img src = "img/footer.png" alt = "">
     <img src = "img/vanpic" alt = "">
     <p>
@@ -44,7 +68,7 @@
     <button>Share Recipe</button>
     <img src = "img/logo.png" alt = "">
     <p>Delicious copyright 2013. all rights reserved. proudly established with Ghost</p>
-  </footer>
+  </footer> -->
 
   
 </body>
