--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,64 @@
   <link rel="stylesheet" href="style.css">
   <title>Chocolate Pizza</title>
 
-  <link rel='stylesheet' type="text/css" href="./style.css"></link>
+  <link rel='stylesheet' type="text/css" href="./style.css">
+  </link>
 
 </head>
+
 <body>
 
-  
+  <header>
+    <div>
+      <img id="logo" src="./img/logo.png" alt="fork and knife logo">
+      <ul>
+        <li>
+          <h1>Delicious</h1>
+        </li>
+        <li>
+          <h2>THE BEST FOOD BLOG ON THE WEB</h2>
+        </li>
+      </ul>
+    </div>
+    <nav>
+      <a href=""><img src="./img/fb-icon.png" alt="Facebook Icon"></a>
+      <a href=""><img src="./img/twit-icon.png" alt="Twitter Icon"></a>
+      <a href=""><img src="./img/gp-icon.png" alt="Google Plus Icon"></a>
+      <a href=""><img src="./img/insta-icon.png" alt="Instagram Icon"></a>
+      <a href=""><img src="./img/flic-icon.png" alt="Flic Icon"></a>
+      <a href=""><img src="./img/pint-icon.png" alt="Pinterest Icon"></a>
+      <a id="rss" href=""><img src="./img/rss-icon.png" alt="RSS Icon"></a>
+      <a href=""><img src="./img/mail-icon.png" alt="Mail Icon"></a>
+    </nav>
+  </header>
+
+
   <main>
     <section>
-        <h2>Chocolate Pizza</h2>
-        <article id="postedDate">
-            POSTED ON 15 DEC 2013 / DESSERTS
-        </article>
-        <article id="printSection">
-            <img  alt="printIcon" src = "img/print-icon.png">
-            <p>PRINT</p>
-        </article>
+      <h3>Chocolate Pizza</h3>
+      <article id="postedDate">
+        POSTED ON 15 DEC 2013 / DESSERTS
+      </article>
+      <article id="printSection">
+        <img alt="printIcon" src="img/print-icon.png">
+        <p>PRINT</p>
+      </article>
     </section>
     <section>
-        <img id = "chocolatePizza" alt="chocolatePizza" src = "img/choco-pizza.png">
+      <img id="chocolatePizza" alt="chocolatePizza" src="img/choco-pizza.png">
     </section>
     <section>
-        <p id="par1">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
-        <p id="par2">Ice cream: in a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whick in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
-        <p id="par3">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+      <p id="par1">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve.
+        Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring
+        frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool
+        completely.</p>
+      <p id="par2">Ice cream: in a small pot over medium heat, combine milk, and granulated sugar until sugar is
+        completely dissolved and the milk is just barely lukewarm. Whick in the egg yolks. Set mixture in the fridge and
+        wait until the fig mixture is cooled.</p>
+      <p id="par3">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+        instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.
+        Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze
+        for at least two hours before serving.</p>
     </section>
 
     <section id="listSection">
@@ -55,9 +90,21 @@
 
   </main>
 
+  <footer>
+    <img src="img/hr-img.png.url" id="slashedLines">
+    <img src="img/hr-img.png" id="slashedLines">
+    <article id="aboutMe">
+      <h4>Venessa Stevenson</h4>
+      <img src="img/van-pic.png" id="vanessaImage">
+      <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+      <li><button>Share Recipe</button></li>
+      <img src="img/small-logo.png" id="smallLogo">
+      <p id="copyright">Delicious &copy * All rights reserved.</p>
+      <p>Proudly established with Ghost.</p>
+    </article>
+  </footer>
 
 
-  
 </body>
 
 </html>
